--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/asset-groups.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/asset-groups.component.html
@@ -35,3 +35,10 @@
         </app-table>
     </div>
 </div>
+
+<ng-template #actionRef>
+    <div class="dialog-body">
+       <span class="dialog-body-header">Delete Asset Group</span>
+       <span class="dialog-body-content">Are you really sure you want to delete "{{selectedAssetGroup}}"?</span>
+    </div>
+</ng-template>
