feat(asset-list): decreased table rowSize set to small

--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -30,6 +30,7 @@
                             [filterTypeOptions]="filterTypeOptions"
                             [headerColName]="headerColName"
                             [onScrollDataLoader]="onScrollDataLoader"
+                            [rowSize]="'SM'"
                             [searchQuery]="searchTxt"
                             [showAddRemoveCol]="true"
                             [showDownloadBtn]="showDownloadBtn"
