--- a/webapp/src/app/pacman-features/modules/compliance/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/cloud-notifications/cloud-notifications.component.html
@@ -12,47 +12,16 @@
  * limitations under the License.
 -->
 
-<div class="policy-knowledgebase-wrapper flex flex-between flex-col">
+ <div class="notifications-wrapper flex flex-col padding-28 gap-24">
+    <div class="flex flex-between flex-align-center">
+        <div>
+            <app-text classNames="headline-6 medium-emphasis" [text]="pageTitle"></app-text>
+        </div>
+    </div>
     <div class="flex flex-col full-height">
-        <app-breadcrumb class="breadcrumb-top" *ngIf='currentPageLevel === 1'></app-breadcrumb>
-        <div class="floating-widgets-header dashboards-header flex flex-between flex-align-center">
-            <div>
-                <!-- <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack();" style="height: 1.4em;" src="../assets/icons/left-arrow.svg"> -->
-                <app-back-navigation></app-back-navigation>
-            </div>
-        </div>
-        <div class="flex flex-align-center toggle-wrap">
-            <div (click)="contextChange('asset');" [class.active]="tabSelected == 'asset'" class="each-tab"> Asset-Specific </div>
-            <div class="relative toggle-parent" (click)='contextChange(toggleSlider());'>
-                <div class="absolute toggle-slider" [class.right]="tabSelected == 'general'"></div>
-            </div>
-            <div (click)="contextChange('general');" [class.active]="tabSelected == 'general'" class="each-tab"> General </div>
-            <img class="help-icon pointer" (click)='callHelp();' src="../assets/icons/question.svg">
-        </div>
-        <div class='floating-widgets-filter-wrapper' *ngIf='filterArray && filterArray.length'>
-            <app-filtered-selector (deleteFilter)='deleteFilters($event)' (deleteAllFilters)='deleteFilters($event)' [(filteredArray)]='filterArray'></app-filtered-selector>
-        </div>
         <div class="flex flex-col full-height cloud-notifications-wrap">
-            <div class="flex flex-center flex-align-center tile-parent no-shrink">
-                <div [class.hide]='summaryValue != 1' class="tile-wrap flex flex-col" *ngFor='let tile of tilesObj; let i = index;'>
-                    <div class="flex flex-between flex-align-center each-tile" (click)='handleTileClick(tile, i);' [class.active]='tile.active'>
-                        <div class="flex flex-col">
-                            <div class="tile-number">{{tile.value}}</div>
-                            <div class="tile-txt">{{tile.title}}</div>
-                        </div>
-                        <div class="flex flex-col">
-                            <img class="tile-img" src='{{tile.icon}}'>
-                        </div>
-                        <div class="absolute tile-hover flex flex-align-center flex-center">
-                            Click to {{tile.active ? 'remove' : 'add'}} filter
-                        </div>
-                    </div>
-                </div>
-                <div *ngIf='summaryValue == 0' class="loader absolute loader-summary"></div>
-                <div *ngIf='summaryValue == -1' class='absolute error-message'>Unable to fetch notifications summary!</div>
-            </div>
             <div class="flex flex-col full-height data-table-container">
-                <app-data-table
+                <!-- <app-data-table
                     [searchTextValues]='searchTxt'
                     [errorValue]='errorValue'
                     [parentName]="errorMsg"
@@ -72,7 +41,19 @@
                     [popRows]='popRows'
                     (rowClickText)='handlePopClick($event)'
                     (searchTriggerred)='callNewSearch()'>
-                </app-data-table>
+                </app-data-table> -->
+                <div class="relative table-wrapper">
+                    <app-table style="height: 100%; width: 100%;" [data]="tableData" [columnWidths]="columnWidths"
+                        [headerColName]="headerColName" [direction]="direction"
+                        [doLocalSearch]="true" [doLocalFilter]="true"
+                        [whiteListColumns]="whiteListColumns" (searchCalledEventEmitter)="callNewSearch($event)"
+                        [searchQuery]="searchTxt" [showSearchBar]="true" [showMoreMenu]="true"
+                        [showDownloadBtn]="true" (downloadClicked)="handlePopClick($event)"  [showFilterBtn]="true" (nextPageCalled)="nextPg($event)"
+                        [totalRows]="totalRows" [tableDataLoaded]="tableDataLoaded"
+                        [rowClickable]="false" [showAddRemoveCol]="true" [tableErrorMessage]="tableErrorMessage"
+                        [onScrollDataLoader]="onScrollDataLoader">
+                    </app-table>
+                </div>
             </div>
         </div>
     </div>
