updating notifications screen

--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -28,6 +28,7 @@
                                [tableDataLoaded]="tableDataLoaded" [tableErrorMessage]="tableErrorMessage"
                                [tableScrollTop]="tableScrollTop"
                                [totalRows]="totalRows" [whiteListColumns]="whiteListColumns"
+                               [rowSize]="'SM'"
                                style="height: 100%; width: 100%;">
                     </app-table>
                 </div>
