updating notifications screen

--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -16,19 +16,30 @@
                                (selectedFilter)="changeFilterTags($event)"
                                (selectedFilterType)='changeFilterType($event)'
                                [centeredColumns]="centeredColumns"
-                               [columnWidths]="columnWidths" [data]="tableData"
-                               [direction]="direction" [doLocalFilter]="false" [doLocalSearch]="false"
-                               [filterTagLabels]="filterTagLabels" [filterTypeLabels]="filterTypeLabels"
-                               [filterTypeOptions]="filterTypeOptions" [filteredArray]="filters"
-                               [headerColName]="headerColName" [onScrollDataLoader]="onScrollDataLoader"
-                               [rowClickable]="true" [searchQuery]="searchTxt"
-                               [showAddRemoveCol]="true" [showDownloadBtn]="true"
-                               [showFilterBtn]="true"
-                               [showMoreMenu]="true" [showSearchBar]="true"
-                               [tableDataLoaded]="tableDataLoaded" [tableErrorMessage]="tableErrorMessage"
-                               [tableScrollTop]="tableScrollTop"
-                               [totalRows]="totalRows" [whiteListColumns]="whiteListColumns"
+                               [columnWidths]="columnWidths"
+                               [data]="tableData"
+                               [direction]="direction"
+                               [doLocalFilter]="false"
+                               [doLocalSearch]="false"
+                               [filterTagLabels]="filterTagLabels"
+                               [filterTypeLabels]="filterTypeLabels"
+                               [filterTypeOptions]="filterTypeOptions"
+                               [filteredArray]="filters"
+                               [headerColName]="headerColName"
+                               [onScrollDataLoader]="onScrollDataLoader"
+                               [rowClickable]="true"
                                [rowSize]="'SM'"
+                               [searchQuery]="searchTxt"
+                               [showAddRemoveCol]="true"
+                               [showDownloadBtn]="true"
+                               [showFilterBtn]="true"
+                               [showMoreMenu]="true"
+                               [showSearchBar]="true"
+                               [tableDataLoaded]="tableDataLoaded"
+                               [tableErrorMessage]="tableErrorMessage"
+                               [tableScrollTop]="tableScrollTop"
+                               [totalRows]="totalRows"
+                               [whiteListColumns]="whiteListColumns"
                                style="height: 100%; width: 100%;">
                     </app-table>
                 </div>
