--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -1,25 +1,46 @@
- <div class="notifications-wrapper flex flex-col padding-28 gap-24">
+<div class="notifications-wrapper flex flex-col padding-28 gap-24">
     <div class="flex flex-between flex-align-center">
         <div>
-            <app-text classNames="headline-6 medium-emphasis" [text]="pageTitle"></app-text>
+            <app-text [text]="pageTitle" classNames="headline-6 medium-emphasis"></app-text>
         </div>
     </div>
     <div class="flex flex-col full-height">
         <div class="flex flex-col full-height cloud-notifications-wrap">
             <div class="flex flex-col full-height data-table-container">
                 <div class="relative table-wrapper">
-                    <app-table style="height: 100%; width: 100%;" [data]="tableData" [columnWidths]="columnWidths"
-                        [headerColName]="headerColName" [direction]="direction"
-                        [doLocalSearch]="false" [doLocalFilter]="false"
-                        [whiteListColumns]="whiteListColumns" (searchCalledEventEmitter)="callNewSearch($event)"
-                        [searchQuery]="searchTxt" [showSearchBar]="true" [showMoreMenu]="true"
-                        [showDownloadBtn]="true" (downloadClicked)="handlePopClick($event)"  [showFilterBtn]="true" (nextPageCalled)="nextPg($event)"
-                        [totalRows]="totalRows" [tableDataLoaded]="tableDataLoaded"
-                        [rowClickable]="true" (rowSelectEventEmitter)="goToDetails($event)" [showAddRemoveCol]="true" [tableErrorMessage]="tableErrorMessage"
-                        [onScrollDataLoader]="onScrollDataLoader"
-                        (selectedFilterType)='changeFilterType($event)' [tableScrollTop]="tableScrollTop"
-                        (selectedFilter)="changeFilterTags($event)" [filteredArray]="filters" [filterTypeLabels]="filterTypeLabels"
-                        [filterTagLabels]="filterTagLabels" (deleteFilters)="deleteFilters($event)" [filterTypeOptions]="filterTypeOptions">
+                    <app-table (deleteFilters)="deleteFilters($event)"
+                               (downloadClicked)="handlePopClick($event)"
+                               (nextPageCalled)="nextPg($event)"
+                               (rowSelectEventEmitter)="goToDetails($event)"
+                               (searchCalledEventEmitter)="callNewSearch($event)"
+                               (selectedFilter)="changeFilterTags($event)"
+                               (selectedFilterType)='changeFilterType($event)'
+                               [centeredColumns]="centeredColumns"
+                               [columnWidths]="columnWidths"
+                               [data]="tableData"
+                               [direction]="direction"
+                               [doLocalFilter]="false"
+                               [doLocalSearch]="false"
+                               [filterTagLabels]="filterTagLabels"
+                               [filterTypeLabels]="filterTypeLabels"
+                               [filterTypeOptions]="filterTypeOptions"
+                               [filteredArray]="filters"
+                               [headerColName]="headerColName"
+                               [onScrollDataLoader]="onScrollDataLoader"
+                               [rowClickable]="true"
+                               [rowSize]="'SM'"
+                               [searchQuery]="searchTxt"
+                               [showAddRemoveCol]="true"
+                               [showDownloadBtn]="true"
+                               [showFilterBtn]="true"
+                               [showMoreMenu]="true"
+                               [showSearchBar]="true"
+                               [tableDataLoaded]="tableDataLoaded"
+                               [tableErrorMessage]="tableErrorMessage"
+                               [tableScrollTop]="tableScrollTop"
+                               [totalRows]="totalRows"
+                               [whiteListColumns]="whiteListColumns"
+                               style="height: 100%; width: 100%;">
                     </app-table>
                 </div>
             </div>
