--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.css
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.css
@@ -31,3 +31,8 @@
     min-width: 200px;
     display: table-cell;
 }
+
+.description{
+    font: var(--text-body-1);
+    color: var(--text-high-emphasis);
+}
