--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -17,14 +17,21 @@
             <div class="row" *ngFor="let detail of eventDetails">
                 <div class="row-wrapper border-bottom" *ngIf="detail.name && detail.value">
                     <app-text class="cell" [text]="detail.name" classNames="body-1 low-emphasis"></app-text>
-                    <app-text-with-icon *ngIf="detail.preImgSrc" [preImagePath]="detail.preImgSrc"
+                    <div class="cell">
+                        <div class="description" *ngIf="detail.name=='Description'; else nonHTMLValue">
+                            <div [innerHTML]="detail.value"></div>
+                        </div>
+                        <ng-template #nonHTMLValue>
+                            <app-text-with-icon *ngIf="detail.preImgSrc" [preImagePath]="detail.preImgSrc"
                                         [textVariant]="'body-1 ' + (detail.link?'primary-400':'high-emphasis')"
                                         [text]="detail.value"
-                                        class="cell"></app-text-with-icon>
-                    <app-text (click)="navigateTo(detail.link)" *ngIf="!detail.preImgSrc" [class.pointer]="detail.link"
-                              [classNames]="'body-1 ' + (detail.link?'primary-400':'high-emphasis')"
-                              [text]="detail.value"
-                              class="cell"></app-text>
+                                        ></app-text-with-icon>
+                            <app-text (click)="navigateTo(detail.link)" *ngIf="!detail.preImgSrc" [class.pointer]="detail.link"
+                                        [classNames]="'body-1 ' + (detail.link?'primary-400':'high-emphasis')"
+                                        [text]="detail.value"
+                                        ></app-text>
+                        </ng-template>
+                    </div>
                 </div>
             </div>
         </div>
