feat(contextual-menu): initial cdk-tree usage

--- a/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.css
+++ b/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.css
@@ -3,9 +3,9 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
@@ -13,189 +13,216 @@
  */
 
 .contextual-menu-wrapper {
-  background-color: var(--background-white);
-  height: 100vh;
-  border-right: 1px solid var(--border-200);
+    background-color: var(--background-white);
+    height: 100vh;
+    border-right: 1px solid var(--border-200);
 }
 
 ::ng-deep .tree-children {
-  margin-left: 22px;
-  padding-left: 25px !important;
-  border-left: 2px solid var(--border-200);
+    margin-left: 22px;
+    padding-left: 25px !important;
+    border-left: 2px solid var(--border-200);
 }
 
 ::ng-deep tree-node-content,
 .know-your-app-content {
-  display: ruby !important;
-  font-family: var(--text-medium-font-family);
-  font-style: normal;
-  font-weight: var(--text-font-weight);
-  font-size: var(--text-body-2-font-size);
-  line-height: var(--text-line-height);
-  color: var(--text-medium-emphasis);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 0px 16px 0px 12px !important;
+    display: ruby !important;
+    font-family: var(--text-medium-font-family);
+    font-style: normal;
+    font-weight: var(--text-font-weight);
+    font-size: var(--text-body-2-font-size);
+    line-height: var(--text-line-height);
+    color: var(--text-medium-emphasis);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 0px 16px 0px 12px !important;
 }
 
 #logo {
-  padding-top: 20px;
-  padding-left: 16px;
-  width: "146px";
-  height: "48px";
+    padding-top: 20px;
+    padding-left: 16px;
+    width: '146px';
+    height: '48px';
 }
 
 .icon {
-  float: left;
-  padding-top: 2px;
+    float: left;
+    padding-top: 2px;
 }
 
 ::ng-deep .node-content-wrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0px;
-  border-radius: 4px;
-  flex: none;
-  align-self: stretch;
-  flex-grow: 0;
-  background: none !important;
-  box-shadow: none !important;
-  float: left;
-  width: 100%;
-  padding: 14px 16px 14px 0px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    border-radius: 4px;
+    flex: none;
+    align-self: stretch;
+    flex-grow: 0;
+    background: none !important;
+    box-shadow: none !important;
+    float: left;
+    width: 100%;
+    padding: 14px 16px 14px 0px;
 }
 
 .node-img {
-  padding: 14px 16px;
-  filter: invert(49%) sepia(6%) saturate(379%) hue-rotate(177deg)
-    brightness(92%) contrast(87%);
+    padding: 14px 16px;
+    filter: invert(49%) sepia(6%) saturate(379%) hue-rotate(177deg) brightness(92%) contrast(87%);
 }
 
 .asset-switcher-container {
-  padding: 16px 16px;
+    padding: 16px 16px;
 }
 
 ::ng-deep .angular-tree-component {
-  padding: 0px 16px;
+    padding: 0px 16px;
 }
 
 ::ng-deep .toggle-children-wrapper-expanded .toggle-children {
-  transform: rotate(180deg) !important;
+    transform: rotate(180deg) !important;
 }
 
 ::ng-deep .toggle-children {
-  height: 13px;
-  width: 13px;
-  background-image: url("/assets/icons/arrow.svg");
+    height: 13px;
+    width: 13px;
+    background-image: url('/assets/icons/arrow.svg');
 }
 
 ::ng-deep .node-wrapper-active tree-node-content {
-  color: var(--primary-500) !important;
+    color: var(--primary-500) !important;
 }
 
-::ng-deep .node-wrapper:hover{
-  border-radius: 4px;
-  background-color: var(--neutral-100);
+::ng-deep .node-wrapper:hover {
+    border-radius: 4px;
+    background-color: var(--neutral-100);
 }
 
 ::ng-deep .node-wrapper-active {
-  border-radius: 4px;
-  background-color: var(--primary-100) !important;
+    border-radius: 4px;
+    background-color: var(--primary-100) !important;
 }
 
 .node-wrapper-active .node-img {
-  /* filter: invert(18%) sepia(99%) saturate(2410%) hue-rotate(209deg)
+    /* filter: invert(18%) sepia(99%) saturate(2410%) hue-rotate(209deg)
     brightness(92%) contrast(109%); */
-  filter: invert(24%) sepia(73%) saturate(2569%) hue-rotate(186deg)
-    brightness(78%) contrast(111%);
+    filter: invert(24%) sepia(73%) saturate(2569%) hue-rotate(186deg) brightness(78%) contrast(111%);
 }
 
-
 ::ng-deep .tree-children .node-wrapper-active .node-content-wrapper {
-  background-color: var(--primary-100) !important;
+    background-color: var(--primary-100) !important;
 }
 
 ::ng-deep tree-viewport {
-  height: calc(100vh - 245px) !important;
-  overflow-x: hidden;
+    height: calc(100vh - 245px) !important;
+    overflow-x: hidden;
 }
 
 ::ng-deep .tree-children tree-node-content {
-  color: var(--text-medium-emphasis);
+    color: var(--text-medium-emphasis);
 }
 
 ::ng-deep .node-drop-slot {
-  height: 0px !important;
+    height: 0px !important;
 }
 
 ::ng-deep .node-wrapper {
-  width: 100%;
+    width: 100%;
 }
 
-.wrapper-collapsed{
-  width: fit-content !important;
+.wrapper-collapsed {
+    width: fit-content !important;
 }
 
-::ng-deep .isCollapsed{
-   display: none !important;
+::ng-deep .isCollapsed {
+    display: none !important;
 }
 
 .wrapper .node-img,
 .wrapper tree-node-expander {
-  filter: brightness(0);
+    filter: brightness(0);
 }
 
-tree-node-expander{
-  position: absolute;
-  right: 24px;
+tree-node-expander {
+    position: absolute;
+    right: 24px;
 }
 
 .wrapper tree-node-content {
-  color: var(--text-high-emphasis);
+    color: var(--text-high-emphasis);
 }
 
 .know-your-app-wrapper {
-  background-color: var(--background-white);
-  cursor: pointer;
-  padding: 0px 16px;
-  display: flex;
-  flex-direction: row;
+    background-color: var(--background-white);
+    cursor: pointer;
+    padding: 0px 16px;
+    display: flex;
+    flex-direction: row;
 }
 
-.app-wrapper{
-  padding: 16px 0px;
+.app-wrapper {
+    padding: 16px 0px;
 }
-
-
 
 .version-wrapper {
-  padding: 8px 0px;
-  display: flex;
-  flex-direction: row;
-  margin: 0px 16px;
-  gap: 6px;
-  border-top: 1px solid var(--border-200);
+    padding: 8px 0px;
+    display: flex;
+    flex-direction: row;
+    margin: 0px 16px;
+    gap: 6px;
+    border-top: 1px solid var(--border-200);
 }
 
 .version-wrapper.collapsed {
-  gap: 2px;
+    gap: 2px;
 }
 
-.version-text{
-  display: flex !important;
-  font: var(--text-body-2);
-  color: var(--text-low-emphasis);
-  overflow: hidden;
-  padding-left: 16px;
+.version-text {
+    display: flex !important;
+    font: var(--text-body-2);
+    color: var(--text-low-emphasis);
+    overflow: hidden;
+    padding-left: 16px;
 }
 
-.version-text.collapsed{
-  padding-left: 2px;
+.version-text.collapsed {
+    padding-left: 2px;
 }
 
-.version-number{
-display: flex !important;
-font: var(--text-body-2);
-color: var(--text-low-emphasis);
+.version-number {
+    display: flex !important;
+    font: var(--text-body-2);
+    color: var(--text-low-emphasis);
+}
+
+nav {
+    height: calc(100vh - 245px);
+    overflow-y: auto;
+    margin: 0 16px;
+    font-family: var(--text-medium-font-family);
+    font-size: var(--text-body-2-font-size);
+    font-weight: var(--text-font-weight);
+    color: var(--text-low-emphasis);
+}
+
+.tree-item {
+    font-family: var(--text-medium-font-family);
+    border-radius: 4px;
+}
+
+.tree-child-item {
+    margin-left: 22px;
+    padding: 14px 16px;
+    border-left: 2px solid var(--border-200);
+}
+
+.tree-child-item:hover,
+.tree-item:hover {
+    background-color: var(--neutral-100);
+    cursor: pointer;
+}
+
+.tree-expand-icon {
+    margin: 0 16px 0 auto;
+    color: var(--text-low-emphasis);
 }
